--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -1,5 +1,7 @@
 body {
-    font-family: "Comic Sans MS", sans-serif;
+    font-family: Interstate, sans-serif;
+    background: #2c2c2c;
+    color: white;
 }
 
 h1 {
@@ -7,6 +9,163 @@ h1 {
 }
 
 #page {
-    margin: 42vh auto auto;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+/* Navbar */
+
+#navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99;
+    width: 100%;
+
+    background: #ffffffee;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+#index #navbar #home_url {
+    display: none;
+}
+
+#navbar a {
+    display: block;
+    text-decoration: none;
+    color: black;
+
+    font-size: 3vh;
+    padding: 2vh;
+
+    transition: 0.25s;
+}
+
+#navbar a:hover {
+    background: #da1f00ff;
+    color: white;
+}
+
+
+#index #navbar {
+    background: transparent;
+    bottom: 0;
+    top: auto;
+}
+
+#index #navbar a {
+    font-size: 5vh;
+    color: white;
+}
+
+/* Index Page Banner */
+
+#banner {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
     text-align: center;
+    background-size: cover;
+    background-position: top;
+}
+
+#banner:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: linear-gradient(to bottom, #00000070, #da1f00ff);
+    opacity: .75;
+}
+
+#banner #banner-text {
+    color: white;
+    position: absolute;
+    left: 10vw;
+    top: 50vh;
+    text-align: left;
+}
+
+#banner h1 {
+    font-size: 10vh;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+}
+
+#banner h2 {
+    font-size: 5vh;
+    font-style: italic;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+}
+
+#banner #sponsors {
+    height: 20vh;
+}
+
+#navbar a {
+    display: block;
+}
+
+#banner #sponsors img {
+    max-height: 100%;
+    margin-right: 1vw;
+}
+
+/* Main Content container */
+
+#content {
+    margin-top: 10vh;
+    width: 80%;
+    max-width: 10in;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#content p {
+    text-align: justify;
+    font-size: 12pt;
+}
+
+#content h1, #content h2, #content h3 {
+    color: #da1f00;
+}
+
+#content p a {
+    color: #da1f00;
+    text-decoration: none;
+    position: relative;
+    transition: .25s;
+}
+
+#content p a:before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
+    height: 2px;
+
+    background-color: #da1f00;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: .25s;
+}
+
+#content p a:hover {
+    color: #ca0f00;
+}
+
+#content p a:hover:before {
+    visibility: visible;
+    transform: scaleX(1);
+    background-color: #ca0f00;
 }
