--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -6,12 +6,13 @@
     <div id="banner" style="background-image: url({% static 'img/team-photo-5-2019.jpg' %});">
         <div id="banner-text">
             <h1>Team AutoCycle</h1>
-            <h2>Bikes, but better</h2>
+            <h2><i>Bikes, but Better</i></h2>
             <div id="sponsors">
                 <a href="http://www.gemstone.umd.edu"><img src="{% static 'img/gemstone_logo.png' %}"
                                                            alt="The Gemstone Honors Program"></a>
                 <a href="http://www.honors.umd.edu"><img src="{% static 'img/honors_college_logo.png' %}"
                                                          alt="The Honors College"></a>
+                <h3>Class of 2022</h3>
             </div>
         </div>
     </div>
