--- a/core/templates/publications.html
+++ b/core/templates/publications.html
@@ -2,7 +2,10 @@
 
 {% block body %}
     <div id="content">
-        <h1>let's make a bike ride itself lmao</h1>
-        <h2>-- evan rman</h2>
+        <h1>Publications and Presentations</h1>
+        <p>
+            As Team AutoCycle moves forward with its research, any and all publications, poster presentations, and other
+            public displays of the team's progress and contributions will be made available here.
+        </p>
     </div>
 {% endblock %}
