--- a/core/templates/resources.html
+++ b/core/templates/resources.html
@@ -2,7 +2,11 @@
 
 {% block body %}
     <div id="content">
-        <h1>let's make a bike ride itself lmao</h1>
-        <h2>-- evan rman</h2>
+        <h1>Resources</h1>
+        <p>
+            Team AutoCycle is dedicated to promoting collaboration, and so as the research process progresses links to
+            team codebases, CAD repositories, and other resources created by the team or created by others and found to
+            be worthy of sharing will be posted here.
+        </p>
     </div>
 {% endblock %}
