--- a/core/templates/team.html
+++ b/core/templates/team.html
@@ -1,82 +1,67 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block body %}
     <div id="content">
-        <h1>let's make a bike ride itself lmao</h1>
-        <h2>-- evan rman</h2>
+        <h1>Our Team</h1>
+        <p>
+            Team AutoCycle is a research team from the University of Maryland's Gemstone Research Honors Program
+            consisting of 14 undergraduate students working on developing semi-autonomous electric bicycle to improve
+            bikeshare systems. Our chosen majors span the gamut from Aerospace Engineering to Art, and we are
+            dedicated to using our research to Do Good in the world around us.
+        </p>
 
-        <p>Curabitur consectetur augue convallis dolor tempor accumsan. Vestibulum sit amet eros accumsan, mattis dolor
-            vel, <a>bibendum</a> ex. Quisque in mi nunc. Quisque in libero nec libero placerat elementum. Suspendisse malesuada
-            luctus facilisis. Curabitur augue ex, tincidunt in orci nec, porta pharetra ex. Sed consequat ac quam ac
-            consectetur. Praesent sit amet tellus vulputate, tincidunt ex in, iaculis ex. Vestibulum vitae ex eu nibh
-            interdum commodo. Pellentesque quis sapien vel metus elementum pulvinar a vel diam. Cras lacinia accumsan
-            sem a aliquam. Nulla at elementum magna, pellentesque consectetur ante.
+        <div class="figure">
+            <img src="{% static 'img/team-photo-5-2019.jpg' %}" alt="Team AutoCycle">
+            <div class="caption">
+                <i>Team AutoCycle.</i> From left to right, back row: Joseph O'Leary, Cooper Grill, Michael Allen, Evan
+                Ruderman, Jacob Bartolomei, Andoni Sanguesa, Mikhail Khrenov. Front row: Jack Mirenzi, Mei Blatchford,
+                Isaac Rose, Logan Swaisgood, Meilina Amaral, Zev Traum, Jeremy Carter.
+            </div>
+        </div>
+
+        <h1>Our Mission</h1>
         <p>
-            Donec sit amet tellus quis nisl elementum cursus sed vel orci. Etiam ultrices eget purus et accumsan. Nulla
-            id auctor lectus. Nullam facilisis scelerisque aliquet. Aenean convallis nec lacus at ultrices. Fusce arcu
-            ex, tincidunt ut mauris sed, semper porta massa. Donec scelerisque magna ut elit elementum sodales. Sed eget
-            ex varius, rutrum quam ut, commodo libero. Mauris pretium est vitae scelerisque interdum. Pellentesque sed
-            tellus sed neque congue fringilla vel et dui. Suspendisse dignissim lacinia felis at egestas.
+            Bikeshare schemes currently have one glaring problem: getting to the bike. Whether at one of several hubs,
+            or lying on a street corner, the fact that any user has to go to the transportation method negates many of
+            its advantages, especially in rarely traversed and underserved areas. We have a solution: have the bike come
+            to you!
+        </p>
+
+        <h2>Research Questions</h2>
         <p>
-            Donec dapibus ornare nisi ac volutpat. Praesent fringilla ornare felis, id molestie libero tincidunt vel.
-            Praesent pretium urna sed sem pharetra, at molestie odio imperdiet. Vivamus ac commodo elit. Cras pretium eu
-            dui ac aliquam. Etiam mollis volutpat lacus eu viverra. Sed non velit sit amet leo hendrerit ullamcorper ut
-            at ipsum. Sed viverra arcu porttitor elit faucibus, in molestie ante consequat. Proin facilisis quis massa
-            id ullamcorper.
+            In order to accomplish this goal we will be working to expand upon existing research in bicycle actuation,
+            stability, autonomy, and navigation to create a holistic system for our purposes. In doing so we seek to
+            answer the following questions:
+        </p>
+        <ul>
+            <li>What are the most effective methods for integrating controls and actuation into a pre-existing bicycle
+                to implement autonomous capabilities in an urban setting?
+            </li>
+            <li>How can these controls methods be optimally combined with navigation technology to fully implement a
+                single autonomous bicycle that could be utilized in a larger bike-sharing system?
+            </li>
+            <li>How could this proposed technology be applied to not only moving people but also the transportation of
+                goods while also minimizing changes to the overarching design?
+            </li>
+        </ul>
+
+        {#        <h1>Our Mentors</h1>#}
+        {#        <p>#}
+        {#            #}
+        {#        </p>#}
+
+        <h1>Contact Us</h1>
         <p>
-            Praesent posuere luctus venenatis. Aenean magna risus, lobortis finibus sollicitudin ut, aliquet et neque.
-            Nullam posuere rutrum nisi et consectetur. Nunc sagittis, odio in pharetra faucibus, sapien urna eleifend
-            dui, et egestas diam nibh et tellus. Nunc gravida congue viverra. Fusce eu nibh consectetur, ultrices elit
-            quis, lacinia dui. Morbi imperdiet at magna vitae tristique. Aenean pharetra dolor placerat placerat ornare.
-            Donec vel commodo risus, nec gravida massa. Vivamus suscipit felis nec tortor sagittis suscipit. Nam lacinia
-            scelerisque odio ac pulvinar. Duis lacus magna, mattis a erat sit amet, varius aliquam sem. Suspendisse
-            congue ultrices arcu ut placerat. Pellentesque a auctor lorem.
-        <p>
-            Duis pretium posuere leo, nec commodo libero ornare et. Aenean venenatis arcu in purus laoreet fringilla.
-            Duis et maximus quam, sit amet pellentesque ante. Suspendisse at pulvinar purus, vitae ullamcorper dui. Orci
-            varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam nec mi sit amet
-            tellus tempor consequat et non mauris. Proin imperdiet mattis efficitur. Duis consectetur, elit at accumsan
-            tristique, nunc augue mattis dui, et malesuada ipsum metus eu arcu. Curabitur id risus at diam varius
-            sagittis ut sed massa. Suspendisse molestie facilisis libero vitae sagittis. Donec sit amet eros sed tortor
-            commodo pretium ut quis elit. Quisque ac luctus nulla. Fusce dignissim odio neque, vel cursus felis pharetra
-            at.
-        <p>
-            Nullam ac ipsum risus. Aliquam sagittis, orci sit amet pulvinar bibendum, ipsum elit eleifend quam, at
-            finibus libero quam sit amet felis. Integer vehicula urna tellus, ut ornare ex consequat quis. Cras blandit
-            nisl enim, et mattis augue rhoncus quis. Sed molestie ante ut tellus sollicitudin, nec mattis elit
-            consectetur. Donec pharetra hendrerit lacus vitae bibendum. In sollicitudin accumsan dignissim. Etiam
-            imperdiet pellentesque ligula, eu condimentum felis vulputate sed. Curabitur quam neque, efficitur ut
-            consequat ut, euismod id purus. Maecenas euismod sollicitudin elit. Praesent mattis euismod nunc in
-            convallis.
-        <p>
-            Vestibulum vel pulvinar purus, eget posuere ligula. Aenean vestibulum quis ante vitae rhoncus. Fusce dictum
-            arcu ut nibh feugiat, a accumsan urna sodales. Curabitur eu faucibus neque, ut sodales diam. Fusce arcu
-            nunc, molestie in neque eget, molestie sagittis ligula. Vestibulum luctus sapien ac urna laoreet, quis
-            faucibus urna lacinia. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-            Curae; Proin sit amet iaculis enim, a convallis mi. Nunc egestas condimentum leo ut pellentesque. Ut rhoncus
-            ornare neque a semper. Vestibulum vulputate interdum dictum. Nullam hendrerit a metus vitae vehicula.
-        <p>
-            Nam condimentum dignissim laoreet. Vivamus feugiat, augue in tincidunt hendrerit, massa est porta turpis,
-            nec sagittis nunc eros dignissim mi. Aenean vel libero felis. Curabitur efficitur sapien id metus dignissim,
-            et bibendum felis mollis. Aenean pellentesque tortor ut metus faucibus, vitae aliquam erat eleifend. Sed
-            massa felis, viverra vitae ornare id, tempus a sapien. Morbi a orci faucibus, condimentum metus sed,
-            elementum velit. Aenean gravida lectus nec sodales suscipit. Sed suscipit elementum enim, sit amet aliquam
-            urna congue ut. Nullam aliquam cursus orci, a ornare sem laoreet a. Nulla lacinia, tortor in ornare mattis,
-            magna ligula malesuada justo, sit amet faucibus eros diam sit amet neque. Etiam nec libero imperdiet,
-            malesuada risus eu, blandit lorem.
-        <p>
-            Donec non nisi augue. Quisque ultricies tellus accumsan arcu tincidunt volutpat. Maecenas eu nunc venenatis
-            enim placerat luctus. Integer sagittis rutrum eros. Vestibulum porta urna in nibh lobortis dignissim. Fusce
-            egestas lacus commodo elit iaculis, at rhoncus tortor convallis. Morbi a turpis id augue volutpat dictum nec
-            quis nisi. Praesent lacus sem, ornare quis porta et, aliquam vel justo. Fusce tristique purus nulla, et
-            tempor odio vehicula quis. Suspendisse fermentum nisl blandit lacinia malesuada.
-        <p>
-            Vestibulum risus nulla, faucibus at porta id, cursus ut sapien. Curabitur nec iaculis urna. Proin erat nisi,
-            ultrices id luctus nec, auctor tempor enim. Etiam aliquam ipsum arcu, in rutrum nulla rutrum vitae. Duis vel
-            pulvinar nunc, a luctus est. Duis rhoncus quam eu risus malesuada, ut feugiat ipsum tincidunt. Nulla
-            aliquam, sem vel maximus porttitor, risus ipsum euismod leo, ut eleifend magna massa sit amet libero.
-            Curabitur feugiat accumsan velit at malesuada. Praesent non sollicitudin nulla. Aenean sit amet nisl vitae
-            ligula suscipit lobortis tincidunt in massa. Donec eget nibh eget magna porta auctor. Morbi vulputate, massa
-            eu interdum imperdiet, nunc quam accumsan leo, sed aliquam tellus elit nec est. Maecenas id nunc urna.</p>
+            If you would like to talk to us, feel free to reach out to the following people for their respective areas:
+        </p>
+        <ul>
+            <li><a href="mailto:evanrman@comcast.net">Evan Ruderman</a> &mdash; Team Liaison</li>
+            <li><a href="mailto:coopergrill@gmail.com">Cooper Grill</a> &mdash; Deputy Team Liaison</li>
+            <li><a href="mailto:andoniesanguesa@gmail.com">Andoni Sanguesa</a> &mdash; Finance Liaison</li>
+            <li><a href="mailto:mamaral@terpmail.umd.edu">Meilina Amaral</a> &mdash; Mentor Liaison</li>
+            <li><a href="mailto:mkhrenov@umd.edu">Mikhail Khrenov</a> &mdash; Web Liaison</li>
+        </ul>
+
     </div>
 {% endblock %}
