--- a/core/templates/publications.html
+++ b/core/templates/publications.html
@@ -4,7 +4,7 @@
     <div id="content">
         <h1>Publications and Presentations</h1>
         <p>
-            As Team AutoCycle moves forward with its research, any and all publications, poster presentations, and other
+            As Team Autocycle moves forward with its research, any and all publications, poster presentations, and other
             public displays of the team's progress and contributions will be made available here.
         </p>
     </div>
