--- a/core/templates/resources.html
+++ b/core/templates/resources.html
@@ -4,7 +4,7 @@
     <div id="content">
         <h1>Resources</h1>
         <p>
-            Team AutoCycle is dedicated to promoting collaboration, and so as the research process progresses links to
+            Team Autocycle is dedicated to promoting collaboration, and so as the research process progresses links to
             team codebases, CAD repositories, and other resources created by the team or created by others and found to
             be worthy of sharing will be posted here.
         </p>
