--- a/core/templates/team.html
+++ b/core/templates/team.html
@@ -5,7 +5,7 @@
     <div id="content">
         <h1>Our Team</h1>
         <p>
-            Team AutoCycle is a research team from the University of Maryland's Gemstone Research Honors Program
+            Team Autocycle is a research team from the University of Maryland's Gemstone Research Honors Program
             consisting of 14 undergraduate students working on developing semi-autonomous electric bicycle to improve
             bikeshare systems. Our chosen majors span the gamut from Aerospace Engineering to Art, and we are
             dedicated to using our research to Do Good in the world around us.
@@ -14,7 +14,7 @@
         <div class="figure">
             <img src="{% static 'img/team-photo-5-2019.jpg' %}" alt="Team AutoCycle">
             <div class="caption">
-                <i>Team AutoCycle.</i> From left to right, back row: Joseph O'Leary, Cooper Grill, Michael Allen, Evan
+                <i>Team Autocycle.</i> From left to right, back row: Joseph O'Leary, Cooper Grill, Michael Allen, Evan
                 Ruderman, Jacob Bartolomei, Andoni Sanguesa, Mikhail Khrenov. Front row: Jack Mirenzi, Mei Blatchford,
                 Isaac Rose, Logan Swaisgood, Meilina Amaral, Zev Traum, Jeremy Carter.
             </div>
