--- a/core/templates/timeline.html
+++ b/core/templates/timeline.html
@@ -5,7 +5,7 @@
     <div id="content">
         <h1>Planned Timeline Timeline</h1>
         <div class="figure">
-            <img src="{% static 'img/timeline.png' %}" alt="AutoCycle Timeline"
+            <img src="{% static 'img/timeline.png' %}" alt="Autocycle Timeline"
                  style="background: white; padding: .5em;">
             <div class="caption">
                 <i>Hypothetical Gantt Chart</i>
