--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -5,7 +5,7 @@
 
     <div id="banner" style="background-image: url({% static 'img/team-photo-5-2019.jpg' %});">
         <div id="banner-text">
-            <h1>Team AutoCycle</h1>
+            <h1>Team Autocycle</h1>
             <h2><i>Bikes, but Better</i></h2>
             <div id="sponsors">
                 <a href="http://www.gemstone.umd.edu"><img src="{% static 'img/gemstone_logo.png' %}"
