Added roster, mentor, librarian

--- a/core/templates/team.html
+++ b/core/templates/team.html
@@ -46,10 +46,36 @@
             </li>
         </ul>
 
-        {#        <h1>Our Mentors</h1>#}
-        {#        <p>#}
-        {#            #}
-        {#        </p>#}
+        <h1>Roster</h1>
+        <h3>Team Mentor</h3>
+        <ul>
+            <li><a href="https://ece.umd.edu/clark/faculty/399/Romel-Gomez">Romel Gomez</a> &mdash; Professor, Electrical and
+                Computer Engineering
+            </li>
+        </ul>
+        <h3>Team Librarian</h3>
+        <ul>
+            <li><a href="https://www.lib.umd.edu/directory/staff/nedelina">Nedelina Tchangalova</a> &mdash; Public Health
+                Librarian, STEM Libraries
+            </li>
+        </ul>
+        <h3>Team Members</h3>
+        <ul>
+            <li>Michael Allen</li>
+            <li>Meilina Amaral</li>
+            <li>Jacob Bartolomei</li>
+            <li>Mei-An Blatchford</li>
+            <li>Jeremy Carter</li>
+            <li>Cooper Grill</li>
+            <li>Mikhail Khrenov</li>
+            <li>John Mirenzi</li>
+            <li>Joesph O'Leary</li>
+            <li>Isaac Rose</li>
+            <li>Evan Ruderman</li>
+            <li>Andoni Sanguesa</li>
+            <li>Logan Swaisgood</li>
+            <li>Zev Traum</li>
+        </ul>
 
         <h1>Contact Us</h1>
         <p>
