--- a/core/templates/team.html
+++ b/core/templates/team.html
@@ -69,7 +69,7 @@
             <li>Cooper Grill</li>
             <li>Mikhail Khrenov</li>
             <li>John Mirenzi</li>
-            <li>Joesph O'Leary</li>
+            <li>Joseph O'Leary</li>
             <li>Isaac Rose</li>
             <li>Evan Ruderman</li>
             <li>Andoni Sanguesa</li>
