Minor updates due to roster changes, added some resources.

--- a/core/templates/timeline.html
+++ b/core/templates/timeline.html
@@ -3,7 +3,7 @@
 
 {% block body %}
     <div id="content">
-        <h1>Planned Timeline Timeline</h1>
+        <h1>Planned Timeline</h1>
         <div class="figure">
             <img src="{% static 'img/timeline.png' %}" alt="Autocycle Timeline"
                  style="background: white; padding: .5em;">
