--- a/core/templates/resources.html
+++ b/core/templates/resources.html
@@ -8,5 +8,11 @@
             team codebases, CAD repositories, and other resources created by the team or created by others and found to
             be worthy of sharing will be posted here.
         </p>
+
+        <h2>GitHub Repositories</h2>
+        <ul>
+            <li><a href="https://github.com/RedRussianBear/autocycle-stability-sim">Autocycle Stability Simulation</a>
+            </li>
+        </ul>
     </div>
 {% endblock %}
