--- a/core/templates/publications.html
+++ b/core/templates/publications.html
@@ -7,5 +7,10 @@
             As Team Autocycle moves forward with its research, any and all publications, poster presentations, and other
             public displays of the team's progress and contributions will be made available here.
         </p>
+        <ul>
+            <li>
+                <a href="https://docs.google.com/presentation/d/1K9xhKBUrAZ6IjoPI4SL1xerhrr66D7p6Hejfa7Ualc0/edit?usp=sharing">
+                    Team Autocycle Thesis Proposal Defense Presentation</a></li>
+        </ul>
     </div>
 {% endblock %}
