--- a/core/templates/resources.html
+++ b/core/templates/resources.html
@@ -11,8 +11,9 @@
 
         <h2>GitHub Repositories</h2>
         <ul>
-            <li><a href="https://github.com/RedRussianBear/autocycle-stability-sim">Autocycle Stability Simulation</a>
-            </li>
+            <li><a href="https://github.com/RedRussianBear/autocycle-stability-sim">Stability Simulation</a></li>
+            <li><a href="https://github.com/CoopCG/autocycle_stability_firmware">Stability Firmware</a></li>
+            <li><a href="https://github.com/AndoniSanguesa/BezierAutocycle">Obstacle Avoidance Path Generator</a></li>
         </ul>
     </div>
 {% endblock %}
