--- a/core/templates/team.html
+++ b/core/templates/team.html
@@ -5,9 +5,9 @@
     <div id="content">
         <h1>Our Team</h1>
         <p>
-            Team Autocycle is a research team from the University of Maryland's Gemstone Research Honors Program
-            consisting of 14 undergraduate students working on developing semi-autonomous electric bicycle to improve
-            bikeshare systems. Our chosen majors span the gamut from Aerospace Engineering to Art, and we are
+            Team Autocycle is a research group from the University of Maryland's Gemstone Research Honors Program
+            consisting of 11 undergraduate students working on developing an autonomous electric bicycle to improve
+            bikeshare systems. Our chosen majors span the gamut from Aerospace Engineering to Mathematics, and we are
             dedicated to using our research to Do Good in the world around us.
         </p>
 
@@ -31,32 +31,29 @@
         <h2>Research Questions</h2>
         <p>
             In order to accomplish this goal we will be working to expand upon existing research in bicycle actuation,
-            stability, autonomy, and navigation to create a holistic system for our purposes. In doing so we seek to
+            stability, autonomy, and navigation to create a complete, functional system. In doing so we seek to
             answer the following questions:
         </p>
         <ul>
-            <li>What are the most effective methods for integrating controls and actuation into a pre-existing bicycle
-                to implement autonomous capabilities in an urban setting?
+            <li>What are the most effective control methods for achieving stability and steering in an arbitrary
+                bicycle?
             </li>
-            <li>How can these controls methods be optimally combined with navigation technology to fully implement a
-                single autonomous bicycle that could be utilized in a larger bike-sharing system?
-            </li>
-            <li>How could this proposed technology be applied to not only moving people but also the transportation of
-                goods while also minimizing changes to the overarching design?
+            <li>How can these control methods be best combined with navigation technology to implement an autonomous
+                bicycle for potential use in a bike-sharing system?
             </li>
         </ul>
 
         <h1>Roster</h1>
         <h3>Team Mentor</h3>
         <ul>
-            <li><a href="https://ece.umd.edu/clark/faculty/399/Romel-Gomez">Romel Gomez</a> &mdash; Professor, Electrical and
-                Computer Engineering
+            <li><a href="https://ece.umd.edu/clark/faculty/399/Romel-Gomez">Romel Gomez</a>
+                &mdash; Professor, Electrical and Computer Engineering
             </li>
         </ul>
         <h3>Team Librarian</h3>
         <ul>
-            <li><a href="https://www.lib.umd.edu/directory/staff/nedelina">Nedelina Tchangalova</a> &mdash; Public Health
-                Librarian, STEM Libraries
+            <li><a href="https://www.lib.umd.edu/directory/staff/nedelina">Nedelina Tchangalova</a>
+                &mdash; Public Health Librarian, STEM Libraries
             </li>
         </ul>
         <h3>Team Members</h3>
@@ -76,13 +73,15 @@
 
         <h1>Contact Us</h1>
         <p>
-            If you would like to talk to us, feel free to reach out to the following people for their respective areas:
+            If you would like to talk to us, feel free to reach out to the following people depending on your question:
         </p>
         <ul>
-            <li><a href="mailto:evanrman@comcast.net">Evan Ruderman</a> &mdash; Team Liaison</li>
-            <li><a href="mailto:coopergrill@gmail.com">Cooper Grill</a> &mdash; Deputy Team Liaison</li>
-            <li><a href="mailto:andoniesanguesa@gmail.com">Andoni Sanguesa</a> &mdash; Finance Liaison</li>
-            <li><a href="mailto:mkhrenov@umd.edu">Mikhail Khrenov</a> &mdash; Web Liaison</li>
+            <li>General team inquiries &mdash; <a href="mailto:evanrman@comcast.net">Evan Ruderman</a> or <a
+                    href="mailto:coopergrill@gmail.com">Cooper Grill</a></li>
+            <li>Finances and donations &mdash; <a href="mailto:andoniesanguesa@gmail.com">Andoni Sanguesa</a></li>
+            <li>Website content &mdash; <a href="mailto:mkhrenov@umd.edu">Mikhail Khrenov</a></li>
+            <li>Navigation research &mdash; <a href="mailto:andoniesanguesa@gmail.com">Andoni Sanguesa</a></li>
+            <li>Stability and controls research &mdash; <a href="mailto:mkhrenov@umd.edu">Mikhail Khrenov</a></li>
         </ul>
 
     </div>
