Made somewhat mobile friendly, added future section on timeline

--- a/core/templates/timeline.html
+++ b/core/templates/timeline.html
@@ -11,7 +11,7 @@
                     <h1>Team Formed</h1>
                     <h3>March 2019</h3>
                     <p>
-                        After passing the Gemstone team selection process, Team Autocycle (formerly SAFE-BIKE) was
+                        After passing the Gemstone team selection process, Team Autocycle (formerly SAFE-Bike) was
                         established by 14 undergraduate students to develop an autonomous bicycle system to alleviate
                         logistical hurdles faced by bikeshares.
                     </p>
@@ -169,6 +169,23 @@
                         to accommodate the drive motor's mounting on the hub and the attachment of the front handlebar
                         control servo motor.
                     </p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-text">
+                    <h1>Where We're Headed</h1>
+                    <h3>Fall 2020</h3>
+                    <p>
+                        Going into the Fall of 2020, Team Autocycle plans to turn its theoretical and simulated results
+                        into practice. Having acquired appropriate actuators to exert the necessary control torques on
+                        the prototype, the team will work to deploy firmware onto the fully instrumented device and
+                        perform experimental tests to reach a robust and effective stability control system.
+                    </p>
+                </div>
+                <div class="timeline-img">
+                    <img src="{% static 'img/timeline/autocycle-animation.gif' %}"
+                         alt="Animation of simulated control system results">
                 </div>
             </div>
 
