--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -43,7 +43,7 @@ h1 {
     text-decoration: none;
     color: black;
 
-    font-size: 3vh;
+    font-size: 32pt;
     padding: 2vh;
 
     transition: 0.25s;
@@ -129,7 +129,6 @@ h1 {
 /* Main Content container */
 
 #content {
-    margin-top: 10vh;
     width: 80%;
     max-width: 13in;
     margin-left: auto;
@@ -225,6 +224,12 @@ h1 {
         top: 0;
         bottom: auto;
     }
+
+    #banner #banner-text {
+        left: 10vw;
+        top: auto;
+        bottom: 0;
+    }
 }
 
 /* Timeline */
@@ -262,4 +267,38 @@ h1 {
     min-width: 400px;
     max-height: 100%;
     max-width: 100%;
+}
+
+@media (max-aspect-ratio: 16/10) {
+    .timeline-item {
+        display: flex;
+        width: 100%;
+        flex-flow: column;
+        padding-top: 3vh;
+        padding-bottom: 3vh;
+        min-height: 94vh;
+        height: auto;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .timeline-text {
+        flex: 0;
+        padding: 0;
+    }
+
+    .timeline-img {
+        max-height: none;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex: 0;
+    }
+
+    .timeline-img img {
+        min-width: 0;
+        max-height: 100%;
+        max-width: 100%;
+    }
 }
