Updated timeline to include f2020 progress and Do Good video

--- a/core/templates/publications.html
+++ b/core/templates/publications.html
@@ -11,6 +11,8 @@
             <li>
                 <a href="https://docs.google.com/presentation/d/1K9xhKBUrAZ6IjoPI4SL1xerhrr66D7p6Hejfa7Ualc0/edit?usp=sharing">
                     Team Autocycle Thesis Proposal Defense Presentation</a></li>
+            <li><a href="https://youtu.be/xsicvftrCkk">
+                    Team Autocycle Do Good Showcase</a></li>
         </ul>
     </div>
 {% endblock %}
