--- a/core/templates/timeline.html
+++ b/core/templates/timeline.html
@@ -72,7 +72,7 @@
 
             <div class="timeline-item">
                 <div class="timeline-text">
-                    <h1>Empirical Characterization Begun</h1>
+                    <h1>Empirical Characterization</h1>
                     <h3>November 2019</h3>
                     <p>
                         As work continued on coding the simulator and elements of the navigation system, parts of the
@@ -127,7 +127,7 @@
                          alt="The team working on firmware to control the electric drive motor">
                 </div>
                 <div class="timeline-text">
-                    <h1>Firmware Integration Begun</h1>
+                    <h1>Initial Firmware Integration</h1>
                     <h3>February 2020</h3>
                     <p>
                         With the simulation in a fully working state, it was time for the team to move on to writing
@@ -140,7 +140,7 @@
 
             <div class="timeline-item">
                 <div class="timeline-text">
-                    <h1>Path Planning Begun</h1>
+                    <h1>Local Path Planning</h1>
                     <h3>February 2020</h3>
                     <p>
                         On the navigation side of the project, with a sufficiently robust image analysis system
@@ -161,7 +161,7 @@
                          alt="Grinding the hub of the prototype to fit the drive motor">
                 </div>
                 <div class="timeline-text">
-                    <h1>Prototype Modifications Begun</h1>
+                    <h1>Prototype Modifications</h1>
                     <h3>March 2020</h3>
                     <p>
                         Moving into late spring, the team began preparing the prototype chassis to be outfitted with
@@ -174,13 +174,50 @@
 
             <div class="timeline-item">
                 <div class="timeline-text">
-                    <h1>Where We're Headed</h1>
-                    <h3>Fall 2020</h3>
+                    <h1>Machining and Actuator Integration</h1>
+                    <h3>October 2020</h3>
                     <p>
-                        Going into the Fall of 2020, Team Autocycle plans to turn its theoretical and simulated results
+                        Going into the Fall of 2020, Team Autocycle began turning its theoretical and simulated results
                         into practice. Having acquired appropriate actuators to exert the necessary control torques on
-                        the prototype, the team will work to deploy firmware onto the fully instrumented device and
-                        perform experimental tests to reach a robust and effective stability control system.
+                        the prototype, the team deployed and refined the stabilization firmware while also machining the
+                        required custom components to couple said actuators to the Autocycle prototype.
+                    </p>
+                </div>
+                <div class="timeline-img">
+                    <img src="{% static 'img/timeline/lathe.gif' %}"
+                         alt="Animation of simulated control system results">
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-img">
+                    <iframe width="711" height="400" src="https://www.youtube-nocookie.com/embed/xsicvftrCkk"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                </div>
+                <div class="timeline-text">
+                    <h1>Do Good Showcase</h1>
+                    <h3>November 2020</h3>
+                    <p>
+                        In November of 2020 the team presented its findings so far to their peers, Gemstone faculty and
+                        staff, and the Do Good Institute of the University of Maryland. The presentation detailed the
+                        team's rationale for pursuing the project, its expected deliverables, the progress that has been
+                        made to achieving the team's goals, and how the project's outcome will Do Good.
+                    </p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-text">
+                    <h1>Where We're Headed</h1>
+                    <h3>Winter 2020-2021</h3>
+                    <p>
+                        Going into the winter, Team Autocycle is pursuing additional capabilities for the prototype by
+                        allowing it to remain upright and steerable even at low or zero velocities. This will allow the
+                        Autocycle to start at rest, come to speed, navigate to its destination, and come to rest again.
+                        The team is also focusing in on experimental design for assessing the efficacy of its
+                        stabilization and navigation techniques.
                     </p>
                 </div>
                 <div class="timeline-img">
